--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "convert-csv-to-json": "^2.0.0",
     "d3-scale": "^4.0.2",
     "i18n-iso-countries": "^7.7.0",
     "next": "14.0.1",
